# mite

./: .gitignore  AGENT.md  README.md  pyproject.toml  requirements.txt  setup.py  setup.sh  update.sh
mite/: __init__.py  __main__.py  cli.py  core.py  prompts.py  setup.py  task_manager.py  tools.py
tests/: __init__.py  conftest.py  test_backends.py
