[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mite"
version = "0.1.0"
description = "Micro AI Terminal Engineer — lightweight AI coding assistant for small models"
requires-python = ">=3.8"

[project.scripts]
mite = "mite.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mite*"]
